[gd_scene load_steps=4 format=1]

[ext_resource path="res://Scripts/Fruta.gd" type="Script" id=1]
[ext_resource path="res://assets/Watermelon_Idle0001.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 88.1692

[node name="Watermelon" type="RigidBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0.735092, 8.8211 )
shapes/0/trigger = true
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 9.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )

[node name="Sprite0" type="Sprite" parent="."]

transform/scale = Vector2( 0.4, 0.4 )
z/z = 10
texture = ExtResource( 2 )

[node name="Shape" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0.735092, 8.8211 )
z/z = 10
shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="Body1" type="RigidBody2D" parent="."]

input/pickable = false
collision/layers = 1
collision/mask = 1
mode = 1
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 5.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0

[node name="Sprite1" type="Sprite" parent="Body1"]

transform/pos = Vector2( -45.0211, 0 )
transform/scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )
region = true
region_rect = Rect2( 0, 0, 234, 474 )

[node name="Body2" type="RigidBody2D" parent="."]

input/pickable = false
collision/layers = 1
collision/mask = 1
mode = 1
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 5.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0

[node name="Sprite2" type="Sprite" parent="Body2"]

transform/pos = Vector2( 44.916, 0.562136 )
transform/scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )
region = true
region_rect = Rect2( 234, 0, 237, 476 )

[node name="TimerDestruir" type="Timer" parent="."]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="TimerDestruir" to="." method="_on_TimerDestruir_timeout"]


